# Publix-Discount-Detector

./: .gitignore  Dockerfile.k8s  README.md  config.toml  k8s-cronjob.yaml  publix_deal_scraper.py  pyproject.toml
